Changed background color

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
-<body bgcolor=blue>
+<body bgcolor=white>
 <center>
-<h2><font color=purple>Hello to all from Donetsk!!!</font></h2>
-<font color=blue>www.petrovskiy.com</font>
+<h2><font color=black>Hello to all from Donetsk!!!</font></h2>
+<font color=yellow>www.petrovskiy.com</font>
 </center>
 </body>
 </html>
